	* include/stdbool.h: Can now be disabled for C++ files if CONFIG_C99_BOOL8 is
	  defined.  CONFIG_C99_BOOL8 indicates (1) that the sizeof(_Bool) is one in both
	  C and C++, and (2) the the C compiler is C99 and supports the _Bool intrinsic
	  type. Requested by Freddie Chopin.
	* include/stdlib/lib_rand.c:  Various additional changes so that the integer
	  value zero can be returned.  Requested by Freddie Chopin.
	* arch/z80/src/Makefile.sdcc*, z80/up_mem.h:  Redesign Z80 build so that it
	  no longer depends on Bash scripts.
	* configs/z80sim/nsh and pashello:  Converted to (1) used the kconfig-frontends
	  configuration tool, and (2) to build natively under Windows.  The NSH
	  configuration is verified; the pashello configuration needs a more TLC.
	* tools/copydir.sh:  Rename tools/winlink.sh to tools/copydir.sh
	* tools/link.bat, unlink.bat, and copydir.bat:  Add Windows counterparts
	  to the link.sh, unlink.sh, and copydir.sh Bash scripts.
	* configs/z80sim/pashello:  Now builds correctly.
	* configs/xtrs/ostest, nsh, and pashello:  Converted to (1) used the kconfig-
	  frontends configuration tool, and (2) to build natively under Windows.
	* drivers/serial/Kconfig and sched/Kconfig:  Two names for same configuration:
	  CONFIG_LOWLEVEL_CONSOLE is bogus and CONFIG_DEV_LOWCONSOLE is in the wrong
	  Kconfig file.  Moved to drivers/serial/Kconfig replacing CONFIG_LOWLEVEL_CONSOLE.
	* arch/z80/include/z180:  Add header files for z180 chips.  Initial versions
	  are just clones of z80 header files.
	* arch/z80/src/z180:  Add source files for z180 chips.  Initial versions
	  are just clones of z80 source files.
	* include/nuttx/arch.h:  Add address environment control interfaces (for use
	  with CPUs the provide MCUs and support process-like address environments).
	* arch/z80/src/z180/z180_mmu.*:  Add MMU support for z180 tasks.
	* configs/p112:  Add very basic board support and an examples/ostest
	  configuration for the venerable P112 board.
