@@ -12,6 +12,22 @@ config BINFMT_DISABLE
 
 if !BINFMT_DISABLE
 
+config BINFMT_EXEPATH
+	bool "Support PATH variable"
+	default n
+	depends on !DISABLE_ENVIRON
+	---help---
+		Use the contents of the PATH environment variable to locate executable
+		files.  Default: n
+
+config PATH_INITIAL
+	string "Initial PATH Value"
+	default ""
+	depends on BINFMT_EXEPATH
+	---help---
+		The initial value of the PATH variable.  This is the colon-separated
+		list of absolute paths.  E.g., "/bin:/usr/bin:/sbin"
+
 config NXFLAT
 	bool "Enable the NXFLAT Binary Format"
 	default n
